--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dashvis",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Dash Plotly implementation of vis.js library",
   "repository": {
     "type": "git",
@@ -12,14 +12,15 @@
   "homepage": "https://github.com/lewkoo/dashvis",
   "main": "build/index.js",
   "scripts": {
+    "set_options": "export NODE_OPTIONS=--openssl-legacy-provider",
     "start": "npm run build && python usage.py",
     "validate-init": "python _validate_init.py",
     "prepublishOnly": "npm run validate-init",
     "publish:npm": "npm publish",
     "publish:pypi": "python -m twine upload dist/*",
     "publish:all": "nrm run publish:npm && npm run publish:pypi",
-    "build:devjs": "webpack --mode development",
-    "build:js": "webpack --mode production",
+    "build:devjs": "npm run set_options && webpack --mode development",
+    "build:js": "npm run set_options && webpack --mode production",
     "build:backends": "dash-generate-components ./src/lib/components dashvis -p package-info.json --r-prefix '' --jl-prefix '' --ignore \\.test\\.",
     "build:backends-activated": "(. dashvis-venv/bin/activate || dashvis-venv\\scripts\\activate && npm run build:backends)",
     "build": "npm run build:js && npm run build:backends",
@@ -57,11 +58,11 @@
     "react-docgen": "^4.1.1",
     "react-dom": "^16.8.6",
     "style-loader": "^0.23.1",
-    "styled-jsx": "^3.2.1",
+    "styled-jsx": "^5.1.2",
     "terser-webpack-plugin": "^2.3.0",
     "webpack": "^4.36.1",
-    "webpack-cli": "3.3.6",
-    "webpack-serve": "3.1.0"
+    "webpack-cli": "^3.3.6",
+    "webpack-serve": "^3.1.0"
   },
   "engines": {
     "node": ">=8.11.0",
